--- a/app/src/main/res/layout/activity_credits.xml
+++ b/app/src/main/res/layout/activity_credits.xml
@@ -60,7 +60,8 @@
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="Ruben" />
+                    android:text="Rubén Gómez Martínez"
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/textView4"
@@ -69,7 +70,8 @@
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="mgr.ourense@gmail.com" />
+                    android:text="mgr.ourense@gmail.com"
+                    android:textSize="16sp" />
 
             </LinearLayout>
 
@@ -86,7 +88,8 @@
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="Álvaro Nóvoa Fernández" />
+                    android:text="Álvaro Nóvoa Fernández"
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/textView6"
@@ -95,7 +98,8 @@
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="anfernandez19@esei.uvigo.es" />
+                    android:text="anfernandez19@esei.uvigo.es"
+                    android:textSize="16sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -109,18 +113,20 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_weight="1"
+                    android:layout_weight="10"
                     android:gravity="center"
-                    android:text="Andrés García Figueroa" />
+                    android:text="Andrés García Figueroa"
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/textView8"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    android:layout_gravity="center|right"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="andres.garciadsr@gmail.com" />
+                    android:text="andres.garciadsr@gmail.com"
+                    android:textSize="16sp" />
             </LinearLayout>
         </LinearLayout>
 
